--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "rm -rf test/db && tape test/*.js"
+    "test": "tape test/*.js; rm -rf test/db"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "level": "^0.18.0",
-    "tap-nyan": "0.0.2",
     "tape": "^3.4.0"
   },
   "dependencies": {
+    "lodash": "^3.0.1",
     "node-uuid": "^1.4.2"
   }
 }
