--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/*.js | tap-nyan; rm -rf test/db",
+    "test": "tape test/*.js; rm -rf test/db",
     "example": "node example/app.js"
   },
   "author": "",
@@ -14,6 +14,9 @@
     "tape": "^3.4.0"
   },
   "dependencies": {
+    "bcrypt": "^0.8.1",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.1.0",
     "lodash": "^3.0.1",
     "node-uuid": "^1.4.2"
   }
