--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "tape test/*.js; rm -rf test/db",
-    "example": "node example/app.js"
+    "example": "node example/app.js",
+    "postinstall": "npm star level-accounts &> /dev/null || exit 0"
   },
   "author": "",
   "license": "ISC",
