--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "level-accounts",
   "version": "1.0.0",
-  "description": "Opinionated, simple and secure token-based authentication solution using LevelDB",
+  "description": "Opinionated, simple and pretty secure token-based authentication solution using LevelDB",
   "main": "index.js",
   "scripts": {
     "test": "tape test/*.js; rm -rf test/db",
