--- a/package.json
+++ b/package.json
@@ -20,5 +20,17 @@
     "bcryptjs": "^2.1.0",
     "lodash": "^3.0.1",
     "node-uuid": "^1.4.2"
-  }
+  },
+  "directories": {
+    "example": "example",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexanderGugel/level-accounts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alexanderGugel/level-accounts/issues"
+  },
+  "homepage": "https://github.com/alexanderGugel/level-accounts"
 }
