--- a/example/package.json
+++ b/example/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "example",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "node app"
+    "start": "node server"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.10.2",
     "express": "^4.11.1"
