--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "tape test/*.js; rm -rf test/db",
-    "example": "node example/app.js",
-    "postinstall": "npm star level-accounts &> /dev/null | exit 0"
+    "example": "node example/app.js"
   },
   "author": "Alexander Gugel <alexander.gugel@gmail.com>",
   "license": "MIT",
